--- a/src/main/resources/templates/sequence_create.html
+++ b/src/main/resources/templates/sequence_create.html
@@ -6,7 +6,7 @@
 <body>
 
 <h1>Claim new Sequence</h1>
-
+<!--
 <form th:action="@{/sequence/create}" th:object="${sequence}" method="post">
     <table>
         <tr>
@@ -36,7 +36,7 @@
             </td>
         </tr>
     </table>
-</form>
+</form>-->
 </body>
 </html>
 
