--- a/src/main/resources/templates/sequence_create.html
+++ b/src/main/resources/templates/sequence_create.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
 <head>
+    <div th:include="header::head"></div>
     <title>Document sequence generator</title>
 </head>
 <body>
