--- a/src/main/resources/templates/sequence_list.html
+++ b/src/main/resources/templates/sequence_list.html
@@ -1,27 +1,24 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
-<header>
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+    <title>Getting Started: Handling Form Submission</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <div th:include="header::head"></div>
-</header>
+</head>
 <body>
+
 Congratulations! Logirani ste.
 
 
 <h3>Generated Sequences</h3>
-<p th:each="user : ${users}">
-<h4>User:</h4>
-<div th:text="${user.username}"></div>
-<h4>Password:</h4>
-<div th:text="${user.password}"></div>
-
 
 <div>---------------------------------------------------------</div>
-</p>
+
 
 <table>
     <tr>
         <td>
-        <button type="submit">Claim New</button>
+            <button type="submit">Claim New</button>
         </td>
         <td>
             <button type="submit">Search Filter</button>
@@ -59,3 +56,5 @@ Congratulations! Logirani ste.
 
 </body>
 </html>
+
+
